--- a/SouthAfrica.html
+++ b/SouthAfrica.html
@@ -27,7 +27,7 @@
         <ul>
             <a href="https://en.wikipedia.org/wiki/List_of_South_African_provinces_by_area">Level 1 South Africa Area
                 Percentage</a>
-            <a href="https://data.worldbank.org/indicator/SP.POP.TOTL?locations=ZA">Level 1 South Africa Area
+            <a href="https://data.worldbank.org/indicator/SP.POP.TOTL?locations=ZA">
                 Total Population of South Africa</a></ul>
         <h4>Raymond Lee</h4>
         <h4>Instructor: Suresh Lodha</h4>
